// 19/WAKU2-LIGHTPUSH rfc: https://rfc.vac.dev/spec/19/
// Protocol identifier: /vac/waku/lightpush/3.0.0

syntax = "proto3";

import "message.proto";

message PushRequest {
  optional string pubsub_topic = 20;
  WakuMessage message = 21;
}

message PushResponse {
  uint32 status_code = 20;
  optional string status_desc = 30;
  optional uint32 relay_peer_count = 40;
}

message PushRpc {
  string request_id = 1;
  optional PushRequest request = 2;
  optional PushResponse response = 3;
}
